<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/noir"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home" >

    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:textColor="@color/blanc" />

    <Button
        android:id="@+id/btn_moreinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_prieres"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_disabled"
        android:minHeight="60dip"
        android:minWidth="170dp"
        android:text="@string/plus_dinfo"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_prieres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_moreinfo"
        android:layout_below="@+id/btn_cantiques"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_disabled"
        android:minHeight="60dip"
        android:minWidth="170dp"
        android:text="@string/prieres"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_cantiques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_prieres"
        android:layout_below="@+id/tv_intro"
        android:layout_marginTop="46dp"
        android:background="@drawable/button_type1"
        android:minHeight="60dip"
        android:minWidth="170dp"
        android:text="@string/cantiques"
        android:textColor="@android:color/white" />

</RelativeLayout>